@@ -1,5 +1,5 @@
- /***************************************************************************
- *   Copyright (C) 2011 by Terraneo Federico                               *
+/***************************************************************************
+ *   Copyright (C) 2011, 2012, 2013, 2014 by Terraneo Federico             *
  *                                                                         *
  *   This program is free software; you can redistribute it and/or modify  *
  *   it under the terms of the GNU General Public License as published by  *
@@ -27,20 +27,80 @@
  
 #ifndef DCC_H
 #define DCC_H
- 
- /**
-  * Write debugging data. If a OpenOCD is connected via JTAG or SWD,
-  * data will be printed on the console
-  * \param str string, can also be not null terminated
-  * \param len string length
-  */
-void debugWrite(const char *str, unsigned int len);
- 
- /**
-  * Write debugging data from within an interrupt or with interrupts disabled.
-  * If a OpenOCD is connected via JTAG or SWD, data will be printed on the console
-  * \param str string, needs to be null terminated
-  */
-void IRQdebugWrite(const char *str);
+
+#include "filesystem/console/console_device.h"
+#include "kernel/sync.h"
+
+namespace miosix {
+
+/**
+ * This class exposes the ARM debug communication channel through the Device
+ * interface, to allow redirecting stdin and stdout to the DCC for boards that
+ * have JTAG/SWD but no serial port
+ */
+class ARMDCC : public Device
+{
+public:
+    /**
+     * Constructor.
+     */
+    ARMDCC() : Device(Device::TTY) {}
+    
+    /**
+     * Read a block of data. As the DCC is write only, this function returns an
+     * error
+     * \param buffer buffer where read data will be stored
+     * \param size buffer size
+     * \param where where to read from
+     * \return number of bytes read or a negative number on failure
+     */
+    ssize_t readBlock(void *buffer, size_t size, off_t where);
+    
+    /**
+     * Write a block of data
+     * \param buffer buffer where take data to write
+     * \param size buffer size
+     * \param where where to write to
+     * \return number of bytes written or a negative number on failure
+     */
+    ssize_t writeBlock(const void *buffer, size_t size, off_t where);
+    
+    /**
+     * Write a string.
+     * An extension to the Device interface that adds a new member function,
+     * which is used by the kernel on console devices to write debug information
+     * before the kernel is started or in case of serious errors, right before
+     * rebooting.
+     * Can ONLY be called when the kernel is not yet started, paused or within
+     * an interrupt. This default implementation ignores writes.
+     * \param str the string to write. The string must be NUL terminated.
+     */
+    void IRQwrite(const char *str);
+    
+    /**
+     * Performs device-specific operations
+     * \param cmd specifies the operation to perform
+     * \param arg optional argument that some operation require
+     * \return the exact return value depends on CMD, -1 is returned on error
+     */
+    int ioctl(int cmd, void *arg);
+    
+private:
+    /**
+     * Send data to the host
+     */
+    static void send(unsigned char c);
+    
+    /**
+     * Send a line of text to the host.
+     * OpenOCD will insert a \n after each line, unfortunately,
+     * as this complicates things.
+     */
+    static void debugStr(const char *str, int length);
+
+    FastMutex mutex;
+};
+
+} //namespace miosix
 
 #endif //DCC_H
