@@ -54,6 +54,12 @@ const unsigned int TICK_FREQ=1000;
 const unsigned int AUX_TIMER_CLOCK=100000;
 const unsigned int AUX_TIMER_MAX=0xffff; ///<\internal Aux timer is 16 bits
 
+/// Serial port baudrate
+const unsigned int SERIAL_PORT_SPEED=19200;
+
+/// Enable DMA mode on USART1 (this occupies the corresponding DMA channels)
+#define SERIAL_1_DMA
+
 /**
  * \}
  */
