@@ -44,6 +44,8 @@
 #include "filesystem/file_access.h"
 #include "filesystem/console/console_device.h"
 #include "drivers/serial.h"
+#include "drivers/dcc.h"
+#include "board_settings.h"
 
 namespace miosix {
 
@@ -73,8 +75,12 @@ void IRQbspInit()
     ledOn();
     delayMs(100);
     ledOff();
-    DefaultConsole::instance().IRQset(
-        intrusive_ref_ptr<Device>(new STM32Serial(3,19200)));
+    DefaultConsole::instance().IRQset(intrusive_ref_ptr<Device>(
+    #ifndef STDOUT_REDIRECTED_TO_DCC
+        new STM32Serial(3,SERIAL_PORT_SPEED)));
+    #else //STDOUT_REDIRECTED_TO_DCC
+        new ARMDCC));
+    #endif //STDOUT_REDIRECTED_TO_DCC
 }
 
 void bspInit2()
