@@ -54,11 +54,11 @@ const unsigned int TICK_FREQ=1000;
 const unsigned int AUX_TIMER_CLOCK=100000;
 const unsigned int AUX_TIMER_MAX=0xffff; ///<\internal Aux timer is 16 bits
 
-///\def STDOUT_REDIRECTED_TO_DCC
-///If defined, stdout is redirected to the debug communication channel, and
-///will be printed if OpenOCD is connected. If not defined, stdout will be
-///redirected throug USART1, as usual.
-//#define STDOUT_REDIRECTED_TO_DCC
+/// Serial port baudrate
+const unsigned int SERIAL_PORT_SPEED=19200;
+
+/// Enable DMA mode on USART1 (this occupies the corresponding DMA channels)
+//#define SERIAL_1_DMA
 
 /**
  * \}
