@@ -1,5 +1,8 @@
 Changelog for Miosix np embedded OS
 
+- Restored support for DCC. It broke somewhere when transitioning to the
+  new Device-based serial port drivers. Removed DCC support on stm32f4 as,
+  due to OpenOCD limitations, it never actually worked.
 - Removed the console interface (file interfaces/console.h).
 - Factorized common code in the various stm32 serial port drivers. Work
   is still ongoing, as stm32f1 still has a different driver, and since
